--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,6 +49,12 @@
                             <p>Products</p>
                         </a>
                     </li>
+                    <li class="@(ViewData["active"]?.ToString() == "orders" ? "active" : "")">
+                        <a asp-controller="Order" asp-action="Index">
+                            <i class="fa-solid fa-cube"></i>
+                            <p>Orders</p>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
