--- a/Views/Order/Index.cshtml
+++ b/Views/Order/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="card-header">
         <div class="row">
             <div class="col-md-6">
-                <h4 class="card-title">Product List</h4>
+                <h4 class="card-title">Order List</h4>
             </div>
             <div class="col-md-6">
                 <a class="btn btn-primary float-right" asp-action="Create"><i class="fa-solid fa-circle-plus"></i> Create</a>
