shtuam datatable te order dhe filter tek produkti

--- a/Views/Order/Create.cshtml
+++ b/Views/Order/Create.cshtml
@@ -85,9 +85,8 @@
             width: 90%;
             margin-left: 5%;
         } */
-
         .total-card {
-            height: 50%;
+            height: auto;
         }
 
         .totalPrice {
